# hnotes

./: .dockerignore  .htaccess  Cargo.toml  Dockerfile  README.adoc  README.md  bacon.toml  compose.yml  error_log  flake.nix  go.mod  index.php  integration_test.go  schema.sql
_pub/style/: box.css  global.css  master.css
features/: public_pages.feature
src/: bar.inc.php  core.inc.php  db.inc.php  functions.inc.php  lib.rs  login.inc.php  main.rs  repository.rs  startup.rs  vars.inc.php
src/domain/: create_user.rs  mod.rs
src/domain/entities/: user.rs
src/localisation/: de.Deutsch.loc.php  en.English.loc.php
src/modules/: about.mod.php  delete.mod.php  desk.mod.php  edit.mod.php  httperror.mod.php  impressum.mod.php  login.mod.php  logout.mod.php  register.mod.php  settings.mod.php  stats.mod.php  view.mod.php
src/repository/: inmemory.rs
src/routes/: mod.rs  sessions.rs  static_pages.rs
src/templates/: box.tmpl.xhtml  httpstatus.tmpl.xhtml  main.tmpl.xhtml
src/web/: mod.rs  view.rs
static/: style.css
templates/: _html.tpl  about.html  base.html  login.html  signup.html
tests/: cucumber.rs
