[package]
name = "hnotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
async-trait = "0.1.52"
cucumber = "0.12.0"
reqwest = "0.11.9"

[[test]]
name = "cucumber"
harness = false
