[package]
name = "hnotes"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Manuel Hutter (https://github.com/mhutter)"]

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.5", default-features = false, features = ["form", "http1", "tokio"] }
axum-extra = { version = "0.9.3", features = ["cookie-key-expansion", "cookie-private"] }
chrono = { version = "0.4.38", default-features = false, features = ["now", "std"] }
eyre = "0.6.12"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["trace", "tracing"] }
tower-livereload = { version = "0.9.3", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.9.1", features = ["v4"] }

[features]
default = ["dev"]
dev = ["livereload"]
livereload = ["dep:tower-livereload"]

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
